twine-tlv/src/snapshots/twine_tlv__collection__tests__success_decode_type_not_first_tlv.snap
---
source: twine-tlv/src/collection.rs
expression: tlv_data.unwrap()
---
TestTlvData(
    [
        170,
        187,
        204,
        221,
    ],
)
