twine-tlv/src/snapshots/twine_tlv__collection__tests__success_decode_type_with_zero_tlv_in_first_pos.snap
---
source: twine-tlv/src/collection.rs
expression: tlv_data.unwrap()
---
TestTlvDataTypeZero(
    [
        170,
    ],
)
