twine-tlv/src/snapshots/twine_tlv__collection__tests__success_find_tlv_type.snap
---
source: twine-tlv/src/collection.rs
expression: bytes
---
[
    0,
    3,
    0,
    0,
    22,
]
