twine-tlv/src/snapshots/twine_tlv__collection__tests__success_from_str.snap
---
source: twine-tlv/src/collection.rs
expression: "format!(\"{:02X?}\", tlv_collection.buffer)"
---
[01, 04, AA, BB, CC, DD, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00, 00]
