twine-tlv/src/snapshots/twine_tlv__collection__tests__success_iter_only_tlvs-10.snap
---
source: twine-tlv/src/collection.rs
expression: i
---
[
    4,
    16,
    176,
    116,
    45,
    73,
    58,
    216,
    18,
    40,
    208,
    118,
    163,
    31,
    219,
    30,
    159,
    121,
]
