twine-tlv/src/snapshots/twine_tlv__collection__tests__success_iter_only_tlvs-11.snap
---
source: twine-tlv/src/collection.rs
expression: i
---
[
    12,
    4,
    2,
    160,
    247,
    248,
]
