twine-tlv/src/snapshots/twine_tlv__collection__tests__success_iter_only_tlvs-4.snap
---
source: twine-tlv/src/collection.rs
expression: i
---
[
    53,
    6,
    0,
    4,
    0,
    31,
    255,
    224,
]
