twine-tlv/src/snapshots/twine_tlv__collection__tests__success_iter_only_tlvs-5.snap
---
source: twine-tlv/src/collection.rs
expression: i
---
[
    2,
    8,
    9,
    64,
    44,
    167,
    182,
    51,
    202,
    90,
]
