twine-tlv/src/snapshots/twine_tlv__collection__tests__success_iter_only_tlvs-6.snap
---
source: twine-tlv/src/collection.rs
expression: i
---
[
    7,
    8,
    253,
    226,
    47,
    220,
    148,
    119,
    155,
    22,
]
