twine-tlv/src/snapshots/twine_tlv__collection__tests__success_iter_only_tlvs-7.snap
---
source: twine-tlv/src/collection.rs
expression: i
---
[
    5,
    16,
    23,
    133,
    25,
    235,
    19,
    239,
    0,
    188,
    84,
    243,
    1,
    38,
    60,
    17,
    57,
    108,
]
