twine-tlv/src/snapshots/twine_tlv__collection__tests__success_iter_only_tlvs-8.snap
---
source: twine-tlv/src/collection.rs
expression: i
---
[
    3,
    15,
    79,
    112,
    101,
    110,
    84,
    104,
    114,
    101,
    97,
    100,
    45,
    56,
    100,
    55,
    55,
]
